feat: sp5-02-api-delete-order
